Homepage hero text too wide on phone messed up layout. More news had a grid display issue. Removed slick-carousel and react-slick

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,49 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.slick-track  {
-  display: flex !important;
-}
-
-.slick-slide {
-  height: unset !important;;
-}
-
-.slick-slide > div {
-  height: 100% !important;;
-}
-
-.slick-dots {
-  bottom: -50px !important;;
-}
-
-.slick-dots > li {
-  margin: 0 10px !important;;
-}
-
-.slick-dots > li > button::before {
-  color: #babfca !important;;
-  font-size: 12px !important;;
-}
-
-.slick-dots > li.slick-active > button::before {
-  color: #A3AAB8 !important;;
-}
-
-.slick-prev::before, .slick-next::before {
-  color: #A3AAB8 !important;;
-}
-
-button.slick-arrow {
-  width: 30px !important;;
-  height: 30px !important;;
-}
-
-button.slick-arrow::before {
-  font-size: 30px !important;;
-  line-height: 30px !important;;
-}
-
 .margins-y-0 > *:first-child {
   margin-top: 0 !important;
 }
